--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简历生成器</title>
+    <title>我的简历</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
@@ -33,11 +33,11 @@
                     <li>
                         <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
                     <li>
-                        <label class="left-label">学历</label><span class="label-value">本科</span></li>
+                        <label class="left-label">学历</label><span class="label-value">博士</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">西北农林科技大学</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2019</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -45,9 +45,9 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">180XXXXXXXX</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">wuzefeng2008@gmail.com</span></li>
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
@@ -113,7 +113,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
+                        <h3>西北农林科技大学 - 进化遗传学（博士）2012-2017</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
