--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h4 id="persona-tag" >生物信息学 / 进化遗传学 / 基因组学</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">武泽峰</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">博士</span></li>
                     <li>
@@ -51,7 +51,7 @@
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/Zefeng-Wu</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -60,15 +60,15 @@
                 <ul class="progress-list">
                     <li>
                         <label class="left-label">Python</label>
+                        <progress value="90" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">R</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
+                        <label class="left-label">Shell</label>
                         <progress value="70" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">Javascript</label>
-                        <progress value="60" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">机器学习</label>
@@ -77,17 +77,17 @@
                 </ul>
             </div>
             <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">专业技能</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">NGS分析</label><span class="label-value">RNA-Seq、ChIP-Seq、ATAC-Seq、BS-Seq、Hi-C、DNA-ReSeq</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">机器学习</label><span class="label-value">Linear regression、SVM、Baysian、Random Forest、(xg)boost、Deep learning</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">其它</label><span class="label-value">PHP、MySQL等</span></li>
                     </li>
                 </ul>
             </div>
@@ -113,7 +113,10 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>西北农林科技大学 - 进化遗传学（博士）2012-2017</h3>
+                        <h3>西北农林科技大学 —— 进化遗传学（博士）2015.9-2019.12</h3>
+						<h3>西北农林科技大学 —— 生物信息学（硕士）2012.9-2015.6</h3>
+						<h3>内蒙古农业大学 —— 生物技术（学士）2008.9-2012.6</h3>
+
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
