--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">https://github.com/Zefeng-Wu</span></li>
+                        <label class="left-label">Github</label><span class="label-value">github.com/Zefeng-Wu</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -140,34 +140,33 @@
                 </ul class="experience-list">
             </div>
             <div class="project info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">发表论文</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>基于 Qt 5 的文本编辑器</h3>
+                        <h3>Plant biology</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Wu, Z., Tang, J., Zhuo, J., Tian, Y., Zhao, F., Li, Z., ... & Yang, R. (2019). Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression. Plant and Cell Physiology, 60(7), 1471-1486.
                             <br/>
                         </p>
+						<p>
+							Sun, Y#., Wu, Z.#, Wang, Y., Yang, J., Wei, G., & Chou, M. (2019). Identification of phytocyanin gene family in legume plants and their involvement in nodulation of Medicago truncatula. Plant and Cell Physiology, 60(4), 900-915. (#co-first authors)
+							<br/>
+						</p>
                     </li>
                     <li>
-                        <h3>基于 Flask 的主机监视系统</h3>
+                        <h3>Human epigenomics</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Tang, J.#, Wu, Z.#, Tian, Y., & Yang, R. (2020). ICGEC: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC genomics, 21(1), 1-19.
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
+                        <h3>Evolution</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, , msaa031, https://doi.org/10.1093/molbev/msaa031.
                         </p>
                     </li>
-                    <li>
-                        <h3>如果项目太少，可以在实验楼上找项目做啊:D</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </li>
+                   
                 </ul>
             </div>
             <div class="trophy info-unit">
@@ -175,19 +174,19 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>小学生作文二等奖</h3>
+                        <h3>优秀研究生奖</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
                     </li> 
                     <li>
-                        <h3>曾获统一冰红茶“再来一瓶”奖</h3>
+                        <h3>数学建模成功参与奖</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
                     </li> 
                     <li>
-                        <h3>这一行也是为了凑版面</h3>
+                        <h3>专业奖学金</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
