--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 						<h3>内蒙古农业大学 —— 生物技术（学士）2008.9-2012.6</h3>
 
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
+                            研究兴趣：通过生物信息学，进化生物学以及比较基因组学等方法研究基因型-表型之间的关系和物种适应性进化的机制。                        </p>
                     </li>
                 </ul>
             </div>
