--- a/index.html
+++ b/index.html
@@ -117,23 +117,22 @@
 						<h3>西北农林科技大学 —— 生物信息学（硕士）2012.9-2015.6</h3>
 						<h3>内蒙古农业大学 —— 生物技术（学士）2008.9-2012.6</h3>
 
-                        <p>
-                            研究兴趣：通过生物信息学，进化生物学以及比较基因组学等方法研究基因型-表型之间的关系和物种适应性进化的机制。                        </p>
+                        
                     </li>
                 </ul>
             </div>
             <div class="work info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">工作经历</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">研究兴趣</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <h3>生物信息学</h3>
+                        <p>通过生物信息学、生物统计学等手段探究基因型-表型之间的关系。
                         </p>
                     </li>
                     <li>
-                        <h3>实验楼－课程内容（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h3>进化遗传学</h3>
+                        <p>通过进化生物学、比较基因组学等方法了解物种进化规律和适应性进化机制.
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -145,24 +144,24 @@
                     <li>
                         <h3>Plant biology</h3>
                         <p>
-                            Wu, Z., Tang, J., Zhuo, J., Tian, Y., Zhao, F., Li, Z., ... & Yang, R. (2019). Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression. Plant and Cell Physiology, 60(7), 1471-1486.
+                            [1] Wu, Z., Tang, J., Zhuo, J., Tian, Y., Zhao, F., Li, Z., ... & Yang, R. (2019). Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression. Plant and Cell Physiology, 60(7), 1471-1486.
                             <br/>
                         </p>
-						<p>
-							Sun, Y#., Wu, Z.#, Wang, Y., Yang, J., Wei, G., & Chou, M. (2019). Identification of phytocyanin gene family in legume plants and their involvement in nodulation of Medicago truncatula. Plant and Cell Physiology, 60(4), 900-915. (#co-first authors)
-							<br/>
-						</p>
+			<p>
+				[2] Sun, Y#., Wu, Z.#, Wang, Y., Yang, J., Wei, G., & Chou, M. (2019). Identification of phytocyanin gene family in legume plants and their involvement in nodulation of Medicago truncatula. Plant and Cell Physiology, 60(4), 900-915. (#co-first authors)
+			<br/>
+			</p>
                     </li>
                     <li>
                         <h3>Human epigenomics</h3>
                         <p>
-                            Tang, J.#, Wu, Z.#, Tian, Y., & Yang, R. (2020). ICGEC: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC genomics, 21(1), 1-19.
+                            [1] Tang, J.#, Wu, Z.#, Tian, Y., & Yang, R. (2020). ICGEC: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC genomics, 21(1), 1-19.
                         </p>
                     </li>
                     <li>
                         <h3>Evolution</h3>
                         <p>
-                            Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, , msaa031, https://doi.org/10.1093/molbev/msaa031.
+                            [1] Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, , msaa031, https://doi.org/10.1093/molbev/msaa031.
                         </p>
                     </li>
                    
