--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">教育经历</span></h2>
                 <hr>
                 <ul class="experience-list">
-                    <li>
+                    <li> <h3>中科院分子植物科学卓越创新中心/植物生理生态研究所 2020.4  —— 至今</h3>
                         <h3>西北农林科技大学 —— 进化遗传学（博士）2015.9-2019.12</h3>
 						<h3>西北农林科技大学 —— 生物信息学（硕士）2012.9-2015.6</h3>
 						<h3>内蒙古农业大学 —— 生物技术（学士）2008.9-2012.6</h3>
