--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="static/image/weixin.jpg" alt="">
 
                 </div>
             </div>
@@ -172,22 +172,11 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>优秀研究生奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>国家英语六级</h3>
                     </li> 
+             
                     <li>
-                        <h3>数学建模成功参与奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li> 
-                    <li>
-                        <h3>专业奖学金</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>计算机四级-网络工程师</h3>
                     </li>                     
             </div>
             <div class="aboutme info-unit right-paragraph">
