--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">180XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">18092142010</span></li>
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">wuzefeng2008@gmail.com</span></li>
                     <li>
@@ -55,7 +55,7 @@
                 </ul>
             </div>
             <div class="skill info-unit">
-                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">计算机技能</span></h2>
                 <hr>
                 <ul class="progress-list">
                     <li>
@@ -87,7 +87,7 @@
                         <label class="left-label">机器学习</label><span class="label-value">Linear regression、SVM、Baysian、Random Forest、(xg)boost、Deep learning</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">PHP、MySQL等</span></li>
+                        <label class="left-label">其他</label><span class="label-value">PHP、MySQL等</span></li>
                     </li>
                 </ul>
             </div>
@@ -142,7 +142,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>Plant biology</h3>
+                        <h3> Plant biology</h3>
                         <p>
                             [1] Wu, Z., Tang, J., Zhuo, J., Tian, Y., Zhao, F., Li, Z., ... & Yang, R. (2019). Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression. Plant and Cell Physiology, 60(7), 1471-1486.
                             <br/>
@@ -153,13 +153,13 @@
 			</p>
                     </li>
                     <li>
-                        <h3>Human epigenomics</h3>
+                        <h3> Human epigenomics</h3>
                         <p>
                             [1] Tang, J.#, Wu, Z.#, Tian, Y., & Yang, R. (2020). ICGEC: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC genomics, 21(1), 1-19.
                         </p>
                     </li>
                     <li>
-                        <h3>Evolution</h3>
+                        <h3> Evolutionary analysis</h3>
                         <p>
                             [1] Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, , msaa031, https://doi.org/10.1093/molbev/msaa031.
                         </p>
@@ -183,7 +183,7 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    吃苦耐劳，积极向上，敢于挑战。
                 </p>
             </div>
         </div>
