--- a/index.html
+++ b/index.html
@@ -144,25 +144,31 @@
                     <li>
                         <h3> Plant biology</h3>
                         <p>
-                            [1] Wu, Z., Tang, J., Zhuo, J., Tian, Y., Zhao, F., Li, Z., ... & Yang, R. (2019). Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression. Plant and Cell Physiology, 60(7), 1471-1486.
-                            <br/>
+                            [1] Zefeng Wu; Jing Tang; Junjie Zhuo; Yuhan Tian; Feiyang Zhao; Zhaohong Li; Yubin Yan; Ruolin Yang; Chromatin Signature and Transcription Factor Binding Provide a Predictive Basis for Understanding Plant Gene Expression, Plant and Cell Physiology, 2019, 60: 1471-1486. 
+			<br/>
                         </p>
 			<p>
-				[2] Sun, Y#., Wu, Z.#, Wang, Y., Yang, J., Wei, G., & Chou, M. (2019). Identification of phytocyanin gene family in legume plants and their involvement in nodulation of Medicago truncatula. Plant and Cell Physiology, 60(4), 900-915. (#co-first authors)
+			    [2] Yali Sun#; Zefeng Wu#; Yujie Wang; Jieyu Yang; Gehong Wei; Minxia Chou; Identification of Phytocyanin Gene Family in Legume Plants and their Involvement in Nodulation of Medicago truncatula, Plant and Cell Physiology, 2019, 60: 900-915.
 			<br/>
 			</p>
                     </li>
                     <li>
                         <h3> Human epigenomics</h3>
                         <p>
-                            [1] Tang, J.#, Wu, Z.#, Tian, Y., & Yang, R. (2020). ICGEC: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC genomics, 21(1), 1-19.
-                        </p>
+                            [1] Jing Tang#, Zefeng Wu#, Yuhan Tian, Ruolin Yang. Icgec: a comparative method for measuring epigenetic conservation of genes via the integrated signal from multiple histone modifications between cell types. BMC Genomics, 2020, 21: 356. 
+			</p>
                     </li>
                     <li>
                         <h3> Evolutionary analysis</h3>
                         <p>
-                            [1] Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, , msaa031, https://doi.org/10.1093/molbev/msaa031.
-                        </p>
+                            [1] Yubin Yan, Zhaohong Li, Ye Li, Zefeng Wu, Ruolin Yang, Correlated Evolution of Large DNA Fragments in the 3D Genome of Arabidopsis thaliana, Molecular Biology and Evolution, 2020, 37: 1621–1636.
+			</p>
+                    </li>
+		    <li>
+                        <h3> Other </h3>
+                        <p>
+                            [1] Yongxing Zhu, Junliang Yin, Yufei Liang, Jiaqi Liu, Jianhua Jia, Heqiang Huo, Zefeng Wu, Ruolin Yang, Haijun Gong. Transcriptomic dynamics provide an insight into the mechanism for silicon-mediated alleviation of salt stress in cucumber plants. Ecotoxicology & Environmental Safety, 2019, 174:245-254.
+			</p>
                     </li>
                    
                 </ul>
